Fix background scrolling on iOS Safari

--- a/styles.css
+++ b/styles.css
@@ -9,12 +9,12 @@ body {
 body {
   display: flex;
   flex-direction: column;
-  min-height: 100vh; /* Use viewport height to ensure footer sticks to the bottom */
-  background: url("totoro-bg.webp") no-repeat center center fixed;
-  background-size: cover; /* Ensures background covers the entire area */
+  min-height: 100vh;
   position: relative;
+  overflow-x: hidden;
 }
 
+/* Don't change this it's for iOS Safari that doesn't support fixed backgrounds */
 body::before {
   content: "";
   position: fixed;
@@ -22,8 +22,8 @@ body::before {
   right: 0;
   bottom: 0;
   left: 0;
-  background: rgba(0, 0, 0, 0.35);
-  z-index: -1; /* Ensures the overlay doesn't cover content */
+  background: url("totoro-bg-dark.webp") no-repeat center center / cover;
+  z-index: -1;
 }
 
 .content-expand,
